@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-10T01:44:12Z",
+  "timestamp" : "2022-07-10T08:17:44Z",
   "count_outdated" : 429,
   "uniques_outdated" : 152,
-  "count" : 641,
-  "uniques" : 222,
+  "count" : 642,
+  "uniques" : 223,
   "views" : [
     {
       "timestamp": "2022-07-01T00:00:00Z",
@@ -67,6 +67,13 @@
       "count_minmax": [ 1, 13 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-07-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
