@@ -1,6 +1,6 @@
 {
-  "count": 212,
-  "uniques": 66,
+  "count": 213,
+  "uniques": 67,
   "views": [
     {
       "timestamp": "2022-07-01T00:00:00Z",
@@ -46,6 +46,11 @@
       "timestamp": "2022-07-09T00:00:00Z",
       "count": 13,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-07-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
