@@ -1,3 +1,10 @@
+2022-07-10T08:17:44Z:
+* notice: last 14d: unq all: 67 213
+* notice: prev accum: outdated-unq outdated-all / unq all: 152 429 / 222 641
+* notice: next accum: outdated-unq outdated-all / unq all: 152 429 / 223 642
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-07-10]
+
 2022-07-10T01:44:12Z:
 * notice: last 14d: unq all: 66 212
 * notice: prev accum: outdated-unq outdated-all / unq all: 152 429 / 221 629
